package com.zsx.design.pattern.behavioral.interpreter;

public interface Expression {
    boolean interpret(String context);
}
